# fetch

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  binding.d.ts  binding.js  eslint.config.js  index.d.ts  index.js  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  ci.yml  release.yml
bench/: build-report-data.js  cold-tls-probe.js  gateway-server.js  k6-scenario.js  probe-child-native.js  probe-child-wreq.js  report-data.json  report-template.html  report.js  run-matrix.sh  upstream-server.js
docker/: Dockerfile  verify-tcp-coherence.js
docs/: benchmark-native-vs-wreq.md  benchmark-report.html  fetch-compatibility.md
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
test/: advanced-options.test.js  body-semantics.test.js  curl-impersonate-presets.test.js  ergonomics.test.js  fetch.test.js
tests/: resolve_tls.rs
