[package]
name = "fetch"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# The Node-API level is the addon's ABI floor, which is a separate thing from
# the supported-Node floor in package.json's `engines` (>=24). It stays at 9
# deliberately: nothing here uses a Node-API 10 entry point, so raising it would
# only narrow which runtimes can load the binary while buying nothing. Node 24
# offers Node-API 10 and loads a napi9 addon fine.
napi = { version = "3", default-features = false, features = ["napi9", "async", "tokio_rt", "serde-json"] }
napi-derive = "3"
wreq = { version = "6.0.0-rc.29", features = ["json", "cookies", "gzip", "brotli", "deflate", "charset", "socks", "stream"] }
wreq-util = { version = "3.0.0-rc.14", features = ["emulation-serde"] }
serde_json = "1"
futures-util = "0.3"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
rcgen = "0.13.2"
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }

[profile.release]
lto = true
strip = "symbols"
